--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
         <title>document</title>
     </head>
     <body>
-        <script src="./bundle.js"></script>
+        <!-- <script src="./bundle.js"></script> -->
+        <script type="module" src="../dist/bundle.js"></script>
     </body>
 </html>
